[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "theyr"
version = "0.0.1"

dependencies = [
  "pandas",
]

requires-python = ">=3.7"

authors = [
  {name = "Francesco Terenzi"},
]

readme = "README.md"
license = {file = "LICENSE"}

[tool.hatch.metadata]
"allow-direct-references" = true

[project.urls]
"Homepage" = "https://github.com/fraterenz/theyr"

[tool.pytest.ini_options]
addopts = [
  "--import-mode=importlib",
]

[tool.hatch.build.targets.wheel]
packages = ["src/theyr"]
